--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "pug": "^2.0.3"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "livereload": "^0.8.0",
+    "nodemon": "^1.19.1",
+    "parcel": "^1.12.3"
   }
 }
