--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.0",
     "jsdom": "^15.1.0",
     "jsonfile": "^5.0.0",
+    "lodash-es": "^4.17.11",
     "lodash.merge": "^4.6.1",
     "nunjucks": "^3.2.0",
     "pug": "^2.0.3"
