--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lodash-es": "^4.17.11",
     "lodash.merge": "^4.6.1",
     "nunjucks": "^3.2.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "remakejs": "^0.3.1"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
