--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "jsdom-test",
+  "name": "remake-todos",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "concurrently --kill-others \"livereload . -w 1000 -e html,njk,sass,css,js,png,gif,jpg\" \"nodemon server.js -e html,njk,sass,css,js,png,gif,jpg -q\" \"parcel public/index.js --out-dir ./public/dist --no-hmr\"",
+    "build": "parcel build public/index.js --out-dir ./public/dist",
     "start": "node server.js"
   },
   "keywords": [],
